--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
           </div>
 
           <div class="btn">
-           <a href="htjvf">
+           <a target="_blank" href="https://drive.google.com/file/d/1SpQlPKrqWfTokdd-fHDMgmi5oRwV0CuO/view?usp=sharing">
             <div class="button">
               Download Resume!
               <span>
